# tahin-gtk

./: .gitignore  LICENSE  README.md  Tahin.glade  stack.yaml  tahin-gtk.cabal
src/: Main.hs
