name:                tahin-gtk
version:             0.1.0
synopsis:            Tahin (Gtk)
description:         Graphical frontend for the Tahin password generator
homepage:            https://github.com/mtesseract/tahin-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10
Data-Files:
    Tahin.glade

executable tahin-gtk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       Tahin
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , cryptohash >= 0.11.6
                     , file-embed >= 0.0.9.1
                     , gtk3 >= 0.14.2
                     , mtl >= 2.2.1
                     , text >= 1.2.2.0
                     , transformers >= 0.4.2.0
  other-modules:       Paths_tahin_gtk
